# serializer version: 1
# name: test_brightness_command
  '''
  Brightness set to 200!
  
  '''
# ---
# name: test_cli_structure
  dict({
    'brightness': list([
      'brightness',
      'host',
    ]),
    'effects': list([
      'host',
      'output_json',
    ]),
    'info': list([
      'host',
      'output_json',
    ]),
    'off': list([
      'host',
    ]),
    'on': list([
      'host',
    ]),
    'palettes': list([
      'host',
      'output_json',
    ]),
    'playlist': list([
      'host',
      'playlist',
    ]),
    'playlists': list([
      'host',
      'output_json',
    ]),
    'preset': list([
      'host',
      'preset',
    ]),
    'presets': list([
      'host',
      'output_json',
    ]),
    'releases': list([
      'output_json',
    ]),
    'reset': list([
      'host',
    ]),
    'scan': list([
    ]),
    'state': list([
      'host',
      'output_json',
    ]),
    'upgrade': list([
      'host',
      'version',
    ]),
  })
# ---
# name: test_connection_error_handler
  '''
  ╭───────────────────────────── Connection error ──────────────────────────────╮
  │                                                                             │
  │     Could not connect to the specified WLED device. Please make sure that   │
  │     the device is powered on, connected to the network and that you have    │
  │     specified the correct IP address or hostname.                           │
  │                                                                             │
  │     If you are not sure what the IP address or hostname of your WLED device │
  │     is, you can use the scan command to find it:                            │
  │                                                                             │
  │     wled scan                                                               │
  │                                                                             │
  ╰─────────────────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_effects_command
  '''
             
  Effects on 
   this WLED 
    device   
  ┌─────────┐
  │ Solid   │
  │ Blink   │
  │ Breathe │
  └─────────┘
  
  '''
# ---
# name: test_info_command
  '''
                                               
             WLED device information           
  ┌───────────────────────┬───────────────────┐
  │ Name                  │ WLED              │
  │ Brand                 │ WLED              │
  │ Product               │ DIY Light         │
  ├───────────────────────┼───────────────────┤
  │ IP address            │ 192.168.1.100     │
  │ MAC address           │ aabbccddeeff      │
  │ Wi-Fi BSSID           │ AA:BB:CC:DD:EE:FF │
  │ Wi-Fi channel         │ 11                │
  │ Wi-Fi RSSI            │ -62 dBm           │
  │ Wi-Fi signal strength │ 76%               │
  ├───────────────────────┼───────────────────┤
  │ Version               │ 0.14.0            │
  │ Build                 │ 2312080           │
  │ Architecture          │ esp32             │
  │ Arduino version       │ v3.3.6-16         │
  ├───────────────────────┼───────────────────┤
  │ Uptime                │ 32489 seconds     │
  │ Free heap             │ 116864 bytes      │
  │ Total storage         │ 64 bytes          │
  │ Used storage          │ 12 bytes          │
  │ % Used storage        │ 19%               │
  ├───────────────────────┼───────────────────┤
  │ Effect count          │ 187 effects       │
  │ Palette count         │ 71 palettes       │
  │ Custom palette count  │ 2 custom palettes │
  ├───────────────────────┼───────────────────┤
  │ Sync UDP port         │ 21324             │
  │ WebSocket             │ 0 client(s)       │
  ├───────────────────────┼───────────────────┤
  │ Live                  │ No                │
  │ Live IP               │                   │
  │ Live mode             │                   │
  ├───────────────────────┼───────────────────┤
  │ LED count             │ 30 LEDs           │
  │ LED power             │ 0 mA              │
  │ LED max power         │ 850 mA            │
  └───────────────────────┴───────────────────┘
  
  '''
# ---
# name: test_info_command_no_wifi
  '''
                                              
            WLED device information           
  ┌──────────────────────┬───────────────────┐
  │ Name                 │ WLED              │
  │ Brand                │ WLED              │
  │ Product              │ DIY Light         │
  ├──────────────────────┼───────────────────┤
  │ IP address           │ 192.168.1.100     │
  │ MAC address          │ aabbccddeeff      │
  ├──────────────────────┼───────────────────┤
  │ Version              │ 0.14.0            │
  │ Build                │ 2312080           │
  │ Architecture         │ esp32             │
  │ Arduino version      │ v3.3.6-16         │
  ├──────────────────────┼───────────────────┤
  │ Uptime               │ 32489 seconds     │
  │ Free heap            │ 116864 bytes      │
  │ Total storage        │ 64 bytes          │
  │ Used storage         │ 12 bytes          │
  │ % Used storage       │ 19%               │
  ├──────────────────────┼───────────────────┤
  │ Effect count         │ 187 effects       │
  │ Palette count        │ 71 palettes       │
  │ Custom palette count │ 2 custom palettes │
  ├──────────────────────┼───────────────────┤
  │ Sync UDP port        │ 21324             │
  │ WebSocket            │ 0 client(s)       │
  ├──────────────────────┼───────────────────┤
  │ Live                 │ No                │
  │ Live IP              │                   │
  │ Live mode            │                   │
  ├──────────────────────┼───────────────────┤
  │ LED count            │ 30 LEDs           │
  │ LED power            │ 0 mA              │
  │ LED max power        │ 850 mA            │
  └──────────────────────┴───────────────────┘
  
  '''
# ---
# name: test_info_command_websocket_none
  '''
                                               
             WLED device information           
  ┌───────────────────────┬───────────────────┐
  │ Name                  │ WLED              │
  │ Brand                 │ WLED              │
  │ Product               │ DIY Light         │
  ├───────────────────────┼───────────────────┤
  │ IP address            │ 192.168.1.100     │
  │ MAC address           │ aabbccddeeff      │
  │ Wi-Fi BSSID           │ AA:BB:CC:DD:EE:FF │
  │ Wi-Fi channel         │ 11                │
  │ Wi-Fi RSSI            │ -62 dBm           │
  │ Wi-Fi signal strength │ 76%               │
  ├───────────────────────┼───────────────────┤
  │ Version               │ 0.14.0            │
  │ Build                 │ 2312080           │
  │ Architecture          │ esp32             │
  │ Arduino version       │ v3.3.6-16         │
  ├───────────────────────┼───────────────────┤
  │ Uptime                │ 32489 seconds     │
  │ Free heap             │ 116864 bytes      │
  │ Total storage         │ 64 bytes          │
  │ Used storage          │ 12 bytes          │
  │ % Used storage        │ 19%               │
  ├───────────────────────┼───────────────────┤
  │ Effect count          │ 187 effects       │
  │ Palette count         │ 71 palettes       │
  │ Custom palette count  │ 2 custom palettes │
  ├───────────────────────┼───────────────────┤
  │ Sync UDP port         │ 21324             │
  │ WebSocket             │ Disabled          │
  ├───────────────────────┼───────────────────┤
  │ Live                  │ No                │
  │ Live IP               │                   │
  │ Live mode             │                   │
  ├───────────────────────┼───────────────────┤
  │ LED count             │ 30 LEDs           │
  │ LED power             │ 0 mA              │
  │ LED max power         │ 850 mA            │
  └───────────────────────┴───────────────────┘
  
  '''
# ---
# name: test_json_output[effects]
  list([
    dict({
      'id': 0,
      'name': 'Solid',
    }),
    dict({
      'id': 1,
      'name': 'Blink',
    }),
    dict({
      'id': 3,
      'name': 'Breathe',
    }),
  ])
# ---
# name: test_json_output[info]
  dict({
    'architecture': 'esp32',
    'arduino_core_version': 'v3.3.6-16',
    'brand': 'WLED',
    'build': '2312080',
    'custom_palette_count': 2,
    'effect_count': 187,
    'filesystem': dict({
      'total': 64,
      'used': 12,
      'used_percentage': 19,
    }),
    'free_heap': 116864,
    'ip': '192.168.1.100',
    'leds': dict({
      'count': 30,
      'max_power': 850,
      'power': 0,
    }),
    'live': False,
    'live_ip': '',
    'live_mode': '',
    'mac_address': 'aabbccddeeff',
    'name': 'WLED',
    'palette_count': 71,
    'product': 'DIY Light',
    'udp_port': 21324,
    'uptime': 32489,
    'version': '0.14.0',
    'websocket': 0,
    'wifi': dict({
      'bssid': 'AA:BB:CC:DD:EE:FF',
      'channel': 11,
      'rssi': -62,
      'signal': 76,
    }),
  })
# ---
# name: test_json_output[palettes]
  list([
    dict({
      'custom': False,
      'id': 0,
      'name': 'Default',
    }),
    dict({
      'custom': False,
      'id': 1,
      'name': 'Random Cycle',
    }),
    dict({
      'custom': False,
      'id': 2,
      'name': 'Primary Color',
    }),
    dict({
      'custom': True,
      'id': 255,
      'name': 'Custom 1',
    }),
    dict({
      'custom': True,
      'id': 254,
      'name': 'Custom 2',
    }),
  ])
# ---
# name: test_json_output[playlists]
  list([
    dict({
      'id': 2,
      'name': 'My Playlist',
    }),
  ])
# ---
# name: test_json_output[presets]
  list([
    dict({
      'active': True,
      'id': 1,
      'name': 'My Preset',
      'quick_label': None,
    }),
  ])
# ---
# name: test_json_output[state]
  dict({
    'brightness': 128,
    'live_data_override': 'off',
    'nightlight': False,
    'on': True,
    'playlist_id': None,
    'preset_id': None,
    'segments': list([
      dict({
        'brightness': 255,
        'effect_id': 0,
        'id': 0,
        'name': None,
        'on': True,
        'palette_id': 0,
        'start': 0,
        'stop': 30,
      }),
    ]),
    'transition': 7,
  })
# ---
# name: test_json_output_releases
  dict({
    'beta': '0.15.0b1',
    'nightly': '17.0.0-dev20260416',
    'stable': '0.14.0',
  })
# ---
# name: test_off_command
  '''
  WLED device turned off!
  
  '''
# ---
# name: test_on_command
  '''
  WLED device turned on!
  
  '''
# ---
# name: test_palettes_command
  '''
                   
  Palettes on this 
     WLED device   
  ┌───────────────┐
  │ Default       │
  │ Random Cycle  │
  │ Primary Color │
  │ Custom 1      │
  │ Custom 2      │
  └───────────────┘
  
  '''
# ---
# name: test_playlist_command_by_id
  '''
  Playlist '2' activated!
  
  '''
# ---
# name: test_playlist_command_by_name
  '''
  Playlist 'My Playlist' activated!
  
  '''
# ---
# name: test_playlists_command
  '''
                 
     Playlists   
   stored in the 
    WLED device  
  ┌─────────────┐
  │ My Playlist │
  └─────────────┘
  
  '''
# ---
# name: test_playlists_command_empty
  '''
  🚫 This device has no playlists
  
  '''
# ---
# name: test_preset_command_by_id
  '''
  Preset '1' activated!
  
  '''
# ---
# name: test_preset_command_by_name
  '''
  Preset 'My Preset' activated!
  
  '''
# ---
# name: test_presets_command
  '''
                                      
   Presets stored in the WLED device  
  ┏━━━━━━━━━━━┳━━━━━━━━━━━━━┳━━━━━━━━┓
  ┃ Preset    ┃ Quick label ┃ Active ┃
  ┡━━━━━━━━━━━╇━━━━━━━━━━━━━╇━━━━━━━━┩
  │ My Preset │             │ Yes    │
  └───────────┴─────────────┴────────┘
  
  '''
# ---
# name: test_presets_command_empty
  '''
  🚫 This device has no presets
  
  '''
# ---
# name: test_releases_command
  '''
                                                                                              
                                                                                              
                                      Found WLED Releases                                     
  ┏━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
  ┃ Release channel ┃ Latest version     ┃ Release notes                                     ┃
  ┡━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┩
  │ Stable          │ 0.14.0             │ https://github.com/wled/WLED/releases/v0.14.0     │
  ├─────────────────┼────────────────────┼───────────────────────────────────────────────────┤
  │ Beta            │ 0.15.0b1           │ https://github.com/wled/WLED/releases/v0.15.0b1   │
  ├─────────────────┼────────────────────┼───────────────────────────────────────────────────┤
  │ Nightly         │ 17.0.0-dev20260416 │ https://github.com/wled/WLED/releases/tag/nightly │
  └─────────────────┴────────────────────┴───────────────────────────────────────────────────┘
  
  '''
# ---
# name: test_reset_command
  '''
  WLED device has been rebooted!
  
  '''
# ---
# name: test_scan_command_keyboard_interrupt
  '''
  Scanning for WLED devices...
  Press Ctrl-C to exit
  
  
  Control-C pressed, stopping scan
                             
                             
      Found WLED devices     
  ┏━━━━━━━━━━━┳━━━━━━━━━━━━━┓
  ┃ Addresses ┃ MAC Address ┃
  ┡━━━━━━━━━━━╇━━━━━━━━━━━━━┩
  └───────────┴─────────────┘
  '''
# ---
# name: test_state_command
  '''
                         
     WLED device state   
  ┌───────────────┬─────┐
  │ Power         │ On  │
  │ Brightness    │ 128 │
  │ Transition    │ 7   │
  │ Nightlight    │ Off │
  │ Live override │ Off │
  └───────────────┴─────┘
                                                               
                            Segments                           
  ┏━━━━┳━━━━━━┳━━━━━━━┳━━━━━━━━━━━━┳━━━━━━━━┳━━━━━━━━━┳━━━━━━━┓
  ┃ ID ┃ Name ┃ Power ┃ Brightness ┃ Effect ┃ Palette ┃ Range ┃
  ┡━━━━╇━━━━━━╇━━━━━━━╇━━━━━━━━━━━━╇━━━━━━━━╇━━━━━━━━━╇━━━━━━━┩
  │ 0  │      │ On    │ 255        │ Solid  │ Default │ 0-30  │
  └────┴──────┴───────┴────────────┴────────┴─────────┴───────┘
  
  '''
# ---
# name: test_unsupported_version_error_handler
  '''
  ╭────────────────────── Unsupported version ───────────────────────╮
  │                                                                  │
  │     The specified WLED device is running an unsupported version. │
  │                                                                  │
  │     Currently only 0.14.0 and higher is supported                │
  │                                                                  │
  ╰──────────────────────────────────────────────────────────────────╯
  
  '''
# ---
# name: test_upgrade_command
  '''
  Current version: 0.14.0
  Upgrading to: 0.15.0
  Upgrade complete! The device will reboot.
  
  '''
# ---
